--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*estilos genericos*/
 h1 {
     color: #117c7c;
     background-color: #82c0ff;
@@ -6,6 +7,109 @@ h1 {
     padding-left: 20px;
     width: 50%;
 }
+input{
+    display: block;
+    margin-top: 1%;
+    margin-bottom: 4%;
+    border: 1px solid #83971c;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+/*estilo body*/
 .body-bck {
+    margin: 2% 2%;
     background-color: #fffbb2;
 }
+
+/*estilo section 1*/
+.d1-form {
+    padding: 1%;
+    background-color: #82c0ff;
+}
+.d1-form label {
+    color: #117c7c;
+}
+.d1-calcular{
+    color: #586217;
+    background-color: #cdea40;
+    border: 1px solid #83971c;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+
+
+/*GOOGLE FONTS*/
+.roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .roboto-thin-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .roboto-light-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .roboto-regular-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .roboto-medium-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .roboto-black-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
