--- a/css/styles.css
+++ b/css/styles.css
@@ -27,15 +27,15 @@ input[type="submit"]{
 }
 /*Tabla IMC*/
 img {
-    display:block;
-    margin: auto;
+    margin-left: 10%;
 }
 
 /*estilo body*/
 .body-bck {
     margin: 2% 2%;
     background-image: url(../img/2.jpg);
-    background-color: #fffbb2;
+    background-repeat: no-repeat;
+    background-size: 1920px 1080px;
 }
 
 /*estilo section 1*/
@@ -53,7 +53,7 @@ section div.d1-form {
     float: left;
     display: flex;
     justify-content: flex-start;
-    margin: 0px 20px 10px 0px;
+    margin: 0% 0% 5% 0%;
 }
 section div.d2-img {
     display: flex;
